updated css, corrected faq text wrap

--- a/_sass/general/general.scss
+++ b/_sass/general/general.scss
@@ -9,7 +9,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: aqua;
+  background-color: #a9cbb7;
 }
 
 li {
@@ -18,14 +18,14 @@ li {
 
 li a {
   display: block;
-  color: black;
+  color: #0A2463;
   text-align: center;
-  padding: 10px 16px;
+  padding: 10px 10px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: whitesmoke;
+  background-color: #FFC800;
 }
 
   
